First try in fixing the "confirm" button problem on mobile devices

--- a/css/app.css
+++ b/css/app.css
@@ -233,3 +233,7 @@ body {
     animation-iteration-count: infinite;
     animation-delay: 800ms;
 }
+
+#createDialog, #deleteDialog {
+    transform: translateY(-50%);
+}
